# Pond_bot2

./: README.md
main_ws/install/: local_setup.sh  setup.ps1  setup.sh
main_ws/install/image_publisher/lib/image_publisher/: publisher
main_ws/install/image_publisher/share/image_publisher/: package.sh  package.xml
main_ws/install/new_bringup/lib/new_bringup/: bringup_manager
main_ws/install/new_bringup/share/new_bringup/: package.bash  package.sh
main_ws/install/new_bringup/share/new_bringup/launch/: bringup_launch.py
main_ws/launch/: launch.py
main_ws/log/: latest_build
main_ws/src/image_publisher/: setup.py  teste.py
main_ws/src/image_publisher/install/: local_setup.sh  setup.sh  setup.zsh
main_ws/src/image_publisher/install/image_publisher/share/image_publisher/: package.sh
main_ws/src/image_publisher/log/: latest_build
main_ws/src/new_bringup/: package.xml  setup.cfg  setup.py
main_ws/src/new_bringup/install/: local_setup.sh  setup.bash  setup.sh
main_ws/src/new_bringup/install/new_bringup/share/new_bringup/: package.dsv  package.ps1  package.sh  package.zsh
main_ws/src/new_bringup/log/: latest_build
visor/: main.py
visor/install/: local_setup.sh  setup.sh
visor/install/my-test-package/share/my-test-package/: package.sh
visor/log/: latest_build
