<?xml version="1.0"?>
<package format="2">
  <name>new_bringup</name>
  <version>0.0.1</version>
  <description>New bringup package for TurtleBot3</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

